fixing form visibility

--- a/we-dev-env/components/survey-popup-form/SurveyPopupForm.module.scss
+++ b/we-dev-env/components/survey-popup-form/SurveyPopupForm.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/breakpoints.scss";
+@import "../../styles/animations.scss";
 @import "../../styles/colors.scss";
 @import "../../styles/fonts.scss";
 
@@ -14,6 +15,12 @@
   border-radius: 5px;
   z-index: 10;
   overflow: auto;
+  visibility: hidden;
+
+  &___visible {
+    visibility: visible;
+    animation: appear-bottom 0.7s forwards;
+  }
 
   @media screen and (min-width: $break-to-tablet) {
     left: 10vw;
@@ -122,4 +129,10 @@
   background: $black;
   opacity: 0.7;
   z-index: 3;
+  display: none;
+
+
+  &___visible {
+    display: block;
+  }
 }
