--- a/we-dev-env/styles/animations.scss
+++ b/we-dev-env/styles/animations.scss
@@ -9,6 +9,19 @@
   }
 }
 
+@keyframes appear-bottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  99% {
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 @keyframes mobile-nav-appear {
   0% {
     opacity: 0;
